--- a/exercicios/5-semantica.html
+++ b/exercicios/5-semantica.html
@@ -1,3 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+
+</head>
+<body>
+  <header>
+    <img src="#" alt="Logotipo do IFRO: im IF estilizado com quadradinhos verdes e com a bolinha do i em vermelho"> Título do site
+    <nav>
+      <a href="#">Início</a>
+      <a href="#secao-noticias">Noticias</a>
+      <a href="#">sobre</a>
+    </nav>
+  </header>
+  
+  <main>
+    <section id="secao-noticias">
+      <h1>Notícias</h1>
+      <article>
+        <h2>IFRO</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium consequuntur quo inventore, et, blanditiis possimus vero magnam ratione labore quis qui voluptatibus tempora recusandae sint consectetur. Nesciunt, eligendi accusantium.</p>
+      </article>
+      <article>
+          <h2>IFRO 2</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laudantium consequuntur quo inventore, et, blanditiis possimus vero magnam ratione labore quis qui voluptatibus tempora recusandae sint consectetur. Nesciunt, eligendi accusantium.</p>
+        </article>
+    </section>
+    <section id="secao-noticias-campi">
+      <h1>Notícias dos campis</h1>
+    </section>
+    <section id="secao-galeria-de-fotos">
+      <h1>Galeria de fotos</h1>
+    </section>
+    <section id="secao-comunicados">
+      <h1>Comunicados</h1>
+    </section>
+  </main>
+
+  <footer>
+    BR 174 S/N, Zona Urbana, Vilhena - RO
+  </footer>
+</body>
+</html>
+
 <!-- 
   Exercício 5: marcar um layout com elementos semầnticos: header, main, nav, section, footer.
  -->
