--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="assets/images/css/estilo.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="header">
     <div class="header--title">
@@ -21,10 +22,11 @@
       <a class="serie--readmore" href="#">Leia mais</a>
     </section>
   </main>
-
   <footer class="footer">
-    <div>Receba as novidades:</div>
-    <div>
+    <div class="footer--element">
+      Receba as novidades:
+    </div>
+    <div class="footer--element">
       <div>Nos siga em nossas redes sociais:</div>
       <div>
         <img src="assets/images/facebook.svg" alt="" class="footer--image">
