--- a/exercicios/6-listas.html
+++ b/exercicios/6-listas.html
@@ -1,17 +1,68 @@
-<!-- 
-  Exercício 6: marcar as listas ordenada e não ordenada; realizar a estilização.
- -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Trabalhando com listas</title>
+  <style>
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  .menu{
+    background-color: #C0392B;
+    list-style: none;
+    display: flex;
+    /* flex-direction: column; */
+  }
+  @media (max-width: 600px){
+    .menu{
+      flex-direction: column;
+    }
+  }
+  .menu__item > a{
+    padding: 20px;
+    display: block;
+    text-decoration: none;
+    color:#fff;
+  }
+  .menu__item > a:hover{
+    background-color: #fff;
+    color:#C0392B ;
+  }
+  </style>
+</head>
+<body>
 
-Listas ordenadas e não-ordenadas
-    
-Lista de atividades de estágio
-Solicitar matrícula
-Realizar o estágio
-Escrever o relatório
-Apresentar o relatório ao orientador
+  <nav>
+    <ul class="menu">
+      <li class="menu__item"><a href="#">Início</a></li>
+      <li class="menu__item"><a href="#">Todas as séries</a></li>
+      <li class="menu__item"><a href="#">Sobre</a></li>
+      <li class="menu__item"><a href="#">Contato</a></li>
+    </ul>
+  </nav>
 
-Lista de frutas
-Maça
-Pera
-Uva
-Banana
+  <!-- 
+    Exercício 6: marcar as listas ordenada e não ordenada; realizar a estilização.
+   -->
+  
+  <h1>Listas ordenadas e não-ordenadas</h1>
+      
+  <ol>
+    <li>Lista de atividades de estágio</li>
+    <li>Solicitar matrícula</li>
+    <li>Realizar o estágio</li>
+    <li>Escrever o relatório</li>
+    <li>Apresentar o relatório ao orientador</li>
+  </ol>
+
+  <h1>Lista de frutas</h1>
+  <ul>
+    <li>Maça</li>
+    <li>Pera</li>
+    <li>Uva</li>
+    <li>Banana</li>
+  </ul>
+</body>
+</html>
